# Cosys_Airsim_Exploration

./: .gitignore  AirSim_Communication_Architecture.md  AirSim_Multi_Machine_Setup.md  CLAUDE.md  UnrealEngine_Build_Documentation.md  airsim_docker.bat  airsim_ros2_docker.bat  build.sh  commit_docs.sh  debug_gps_transmission.py  package.json  test_qgc_connectivity.bat
.claude/: settings.local.json
AirLib/.claude/: settings.local.json
PX4Scripts/: run_airsim_sitl.sh  run_airsim_sitl_broadcast.sh  run_airsim_sitl_final.sh
PythonClient/: activate_env.bat  check_airsim_status.py  check_px4_containers.py  containerization_summary.md  debug_mavlink_gps_detailed.py  diagnose_gps_home_issue.py  diagnose_mavlink_complete.py  launch_mission_control.bat  mission_api_server.py  orbit_workaround.py  px4_param_fix.py  requirements.txt  setup_airsim_env.py  setup_cosys_environments.py  setup_path.py  simple_gps_test.py  start_api_server.bat  start_streamlit_ui.bat  streamlit_mission_control.py  test_final_wsl2.py  test_gps_home_api.py  test_gps_transmission.py  test_wsl2_connection.py  wait_for_gps_home.py  wsl2_vs_docker_analysis.py
PythonClient/car/: car_collision.py  car_monitor.py  car_stress_test.py  car_time_of_day.py  distance_sensor_multi.py  drive_straight.py  echo_test.py  hello_car.py  lidar_test.py  multi_agent_car.py  pause_continue_car.py  pause_test.py  reset_test_car.py  runtime_car.py  setup_path.py
PythonClient/computer_vision/: cv_capture.py  cv_mode.py  cv_navigate.py  fov_change.py  getpos.py  ground_truth.py  image_benchmarker.py  objects.py  pan_tilt.py  segmentation.py
PythonClient/cosys_mission_env/: pyvenv.cfg
PythonClient/detection/: detection.py  setup_path.py
PythonClientColosseum/: demo_streamlit.py  launch_mission_control.bat  launch_mission_system.bat  level_manager.py  mission_api_server.py  quick_setup.py  remove_emojis.py  requirements.txt  setup_airsim_env.py  setup_separate_environments.py  start_api_server.bat  start_streamlit_ui.bat  streamlit_mission_control.py
cmake/: CMakeLists.txt
cmake/cmake-modules/: CommonSetup.cmake  CommonSetupDocker.cmake
cmake/rpclib_wrapper/: CMakeLists.txt  CMakeLists_docker.txt
docker/: Dockerfile_binary  Dockerfile_source  README-FULL-STACK.md  WINDOWS_SETUP_GUIDE.md  airsim_containerization_guide.md  build_airsim_image.py  docker-compose-full-stack.yml  download_blocks_env_binary.sh  download_blocks_simple.ps1  download_blocks_windows.ps1  full_stack_settings.json
docker_clean/: CAMERA_INTEGRATION_SUMMARY.md  CAMERA_TO_RVIZ2_COMPLETE_GUIDE.md  CAMERA_TO_RVIZ2_GUIDE.md  COMPLETE_WORKFLOW_GUIDE.md  HIL_COMMUNICATION_FIX.md  README.md  SIMULATOR_CONNECTION_ANALYSIS.md  UNIFIED_GENERATOR_GUIDE.md  UPDATED_UNIFIED_GENERATOR_GUIDE.md  USAGE_GUIDE.md
docs/: README.md  adding_new_apis.md  lights.md  mavlink_connection_design.md  mavlink_networking_troubleshooting.md  pfm.md  px4_build.md  px4_gps_home_troubleshooting.md  px4_lockstep.md  remote_control.md  ros_cplusplus.md  sensors.md  using_car.md
docs/core/: README.md  (+17 more)
install/: local_setup.sh  setup.ps1  setup.sh
log/: latest_build
ros2/: MULTI_NODE_ROADMAP.md  README_MULTIROTOR_ARCHITECTURE.md  ROS2_ARCHITECTURE_ANALYSIS.md  setup_wsl_ros2.sh
ros2/src/install/airsim_ros_pkgs/share/airsim_ros_pkgs/: local_setup.sh  package.sh  package.xml
ros2/src/install/airsim_ros_pkgs/share/airsim_ros_pkgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake
ros2/src/install/airsim_ros_pkgs/share/airsim_ros_pkgs/launch/: simple_single_drone.launch.py
ros2_mission/: AirSim_ROS2_DataFlow_Explanation.md  DOCKER_ROS2_QUICKSTART.md  MULTI_NODE_IMPLEMENTATION_STATUS.md  MULTI_NODE_ROADMAP.md  README_Adding_Services_Messages.md  ROS2_ARCHITECTURE_ANALYSIS.md  ROS2_IMPLEMENTATION_STATUS.md  ROS2_USAGE_GUIDE.md  WSL2_ROS2_TROUBLESHOOTING.md  WSL_ROS2_SETUP_GUIDE.md  build_grid_search.sh  build_interfaces_only.sh  setup_wsl_ros2.sh  test_grid_search.sh
ros2_mission/src/airsim_mission_interfaces/: CMakeLists.txt  package.xml
ros2_mission/src/airsim_mission_interfaces/action/: GridSearch.action  WaypointNavigation.action
ros2_mission/src/airsim_mission_interfaces/msg/: CurrentWaypoint.msg  GridParams.msg  MissionProgress.msg  SafetyParams.msg  SearchArea.msg  SearchStats.msg  Waypoint.msg  WaypointArray.msg
ros2_mission/src/airsim_mission_interfaces/srv/: GenerateGrid.srv  GetMissionStatus.srv  UpdateMission.srv
(+927 files in other folders)
